--- a/sap/src/main/resources/application-dev.properties
+++ b/sap/src/main/resources/application-dev.properties
@@ -17,7 +17,7 @@ server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
 idaas.kafka.Brokers=localhost:9092
-idaas.iot.integration.topic=iot
+idaas.idocs.integration.topic=idocs
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
