--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,6 @@ nb-configuration.xml
 
 
 ### Eclipse ###
-
 .metadata
 bin/
 tmp/
@@ -61,7 +60,6 @@ local.properties
 .settings/
 .loadpath
 .recommenders
-
 # Eclipse Core
 .project
 
@@ -105,12 +103,10 @@ local.properties
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
 # User-specific stuff:
 .idea/
 # IntelliJ local project file
 *.iml
-
 # Gradle:
 .idea/gradle.xml
 .idea/libraries
@@ -178,7 +174,6 @@ $RECYCLE.BIN/
 # Icon must end with two \r
 Icon
 
-
 # Thumbnails
 ._*
 
@@ -210,7 +205,6 @@ Temporary Items
 
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
-
 
 ### Java ###
 *.class
@@ -291,19 +285,24 @@ typings/
 
 # IntelliJ idea directory exclusion
 /.idea/
-iDaaS-Connect-CMS-BlueButton/.idea
-./iDaaS-Connect-Cloud/.idea
-./iDaaS-Connect-EDI/.idea
-./iDaaS-Connect-FHIR/.idea
-./iDaaS-Connect-HL7/.idea
-./iDaaS-Connect-SAP/.idea
-./iDaaS-Connect-ThirdParty/.idea
+./cloud/.idea
+./cms-blue-button/.idea
+./cms-interoperability/.idea
+./edi/.idea
+./fhir/.idea
+./hl7/.idea
+./ncpdp/.idea
+./sap/.idea
+./third-party/.idea
 
 # VSCode
 iDaaS-Connect-CMS-BlueButton/.vscode
-./iDaaS-Connect-Cloud/.vscode
-./iDaaS-Connect-EDI/.vscode
-./iDaaS-Connect-FHIR/.vscode
-./iDaaS-Connect-HL7/.vscode
-./iDaaS-Connect-SAP/.vscode
-./iDaaS-Connect-ThirdParty/.vscode
+./cloud/.vscode
+./cms-blue-button/.vscode
+./cms-interoperability/.vscode
+./edi/.vscode
+./fhir/.vscode
+./hl7/.vscode
+./ncpdp/.vscode
+./sap/.vscode
+./third-party/.vscode
