--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -76,12 +76,11 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-jackson-starter</artifactId>
     </dependency>
-
+    <!-- AWS -->
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-aws</artifactId>
     </dependency>
-    <!-- AMQ Using Native Camel as it should provide native connectivity-->
     <!-- amqP and JMS -->
     <dependency>
       <groupId>org.apache.camel</groupId>
