--- a/cloud/src/main/resources/application-dev.properties
+++ b/cloud/src/main/resources/application-dev.properties
@@ -38,10 +38,8 @@ idaas.aws.mq.topic=myHealthcareTopic?connectionFactory=#jmsConnectionFactory
 # AWS SQS
 idaas.aws.sqs=testhealthcare
 # AWS Access
-idaas.aws.access.key=<Your Key Here>
-idaas.aws.secret.key=<Your Key Here>
-# Azure
-# GCP
+aws.access.key=<Your Key Here>
+aws.secret.key=<Your Key Here>
 # AWS-S3
 camel.component.aws2-s3.accessKey=<Your Key Here>
 camel.component.aws2-s3.secretKey=<Your Key Here>
@@ -70,4 +68,5 @@ broker.password=<Your Password Here>
 broker.url=amqps://${broker.address}:${broker.port}?${broker.options}
 sleep.time=1
 amq.url=amq:test.
-
+# Azure
+# GCP
