--- a/hl7/pom.xml
+++ b/hl7/pom.xml
@@ -3,6 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hl7</artifactId>
+    <version>0.0.1</version>
 
     <parent>
         <groupId>io.connectedhealth_idaas</groupId>
