--- a/hl7/src/main/resources/application-dev.properties
+++ b/hl7/src/main/resources/application-dev.properties
@@ -18,8 +18,8 @@ idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
 idaas.processacks.topic.name=hl7acks
 idaas.datatier.topic.name=datatier
-idass.heda.topic.name=hedainbound
-idass.sdoh.topic.name=sdoh
+idaas.heda.topic.name=hedainbound
+idaas.sdoh.topic.name=sdoh
 idaas.hl7adt.topic.name=adt
 idaas.hl7mdm.topic.name=mdm
 idaas.hl7mfn.topic.name=mfn
@@ -45,7 +45,7 @@ idaas.process.Deidentification=false
 idaas.process.Empi=false
 idaas.process.Acks=true
 idaas.process.DataTier=false
-idass.process.HEDA=false
+idaas.process.HEDA=false
 # Conversions
 idaas.convert.CCDAtoFHIR=true
 idaas.convert.HL7toFHIR=true
