--- a/hl7/pom.xml
+++ b/hl7/pom.xml
@@ -3,11 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hl7</artifactId>
+    <version>0.0.1</version>
 
     <parent>
         <groupId>io.connectedhealth_idaas</groupId>
         <artifactId>idaas-connect</artifactId>
-        <version>3.9.7-SNAPSHOT</version>
+        <version>3.9.8-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
