--- a/cms-blue-button/pom.xml
+++ b/cms-blue-button/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>cms-blue-button</artifactId>
     <parent>
-      <groupId>io.connectedhealth_idaas</groupId>
-      <artifactId>idaas-connect</artifactId>
+      <groupId>io.connectedhealth_intgrtnhdf</groupId>
+      <artifactId>integrationframework-hdf</artifactId>
       <version>3.9.8-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
     </parent>
