--- a/cms-interoperability/pom.xml
+++ b/cms-interoperability/pom.xml
@@ -4,8 +4,8 @@
 
     <artifactId>cms-interoperability</artifactId>
     <parent>
-      <groupId>io.connectedhealth_idaas</groupId>
-      <artifactId>idaas-connect</artifactId>
+      <groupId>io.connectedhealth_intgrtnhdf</groupId>
+      <artifactId>integrationframework-hdf</artifactId>
       <version>3.9.8-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
     </parent>
