--- a/edi/pom.xml
+++ b/edi/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>edi</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
 
     <parent>
-      <groupId>io.connectedhealth_intgrtnhdf</groupId>
-      <artifactId>integrationframework-hdf</artifactId>
+      <groupId>io.integration_framework</groupId>
+      <artifactId>hdf</artifactId>
       <version>3.9.8-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
     </parent>
@@ -84,7 +84,6 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-bindy</artifactId>
-            <version>3.16.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
