--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.connectedhealth_intgrtnhdf</groupId>
-    <artifactId>integrationframework-hdf</artifactId>
+    <groupId>io.integration_framework</groupId>
+    <artifactId>hdf</artifactId>
     <version>3.9.8-SNAPSHOT</version>
-    <name>iDAAS Connect</name>
+    <name>Integration Framework HDF</name>
     <packaging>pom</packaging>
 
     <scm>
@@ -26,14 +26,14 @@
     </properties>
 
     <modules>
-        <module>cms-blue-button</module>
-        <module>cms-interoperability</module>
-        <module>cloud</module>
+<!--        <module>cms-blue-button</module>-->
+<!--        <module>cms-interoperability</module>-->
+<!--        <module>cloud</module>-->
         <module>edi</module>
         <module>fhir</module>
         <module>hl7</module>
-        <module>sap</module>
-        <module>third-party</module>
+<!--        <module>sap</module>-->
+<!--        <module>third-party</module>-->
     </modules>
 
     <dependencyManagement>
@@ -62,26 +62,12 @@
                 <artifactId>slf4j-simple</artifactId>
                 <version>1.7.35</version>
             </dependency>
-            <!--https://stackoverflow.com/questions/48722138/how-to-monitor-apache-camel-routes-in-a-java-project-using-hawtio-->
-            <!-- UI -->
-            <!-- Only needed to comment in if testing local-->
-            <!--   <dependency>
-                 <groupId>io.hawt</groupId>
-                 <artifactId>hawtio-springboot</artifactId>
-                 <version>2.14.4</version>
-             </dependency>
-             <dependency>
-                 <groupId>org.jolokia</groupId>
-                 <artifactId>jolokia-jvm</artifactId>
-                 <version>1.6.2</version>
-             </dependency>-->
             <!-- iDaaS Event Builder Repo or Local-->
             <dependency>
                 <groupId>io.connectedhealth-idaas</groupId>
                 <artifactId>idaas-eventbuilder</artifactId>
                 <version>2.3.0</version>
             </dependency>
-
             <dependency>
                 <groupId>io.github.linuxforhealth</groupId>
                 <artifactId>hl7v2-fhir-converter</artifactId>
@@ -148,7 +134,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>2.2.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -161,7 +146,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.9.1</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -264,6 +248,16 @@
                         <releaseProfiles>releases</releaseProfiles>
                         <scmCommentPrefix>[ci skip]</scmCommentPrefix>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.2.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.9.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.jboss.redhat-fuse</groupId>
