--- a/cms-interoperability/src/main/resources/application-dev.properties
+++ b/cms-interoperability/src/main/resources/application-dev.properties
@@ -25,6 +25,7 @@ idaas.priorauth.topic.name=priorauth_inbd
 idaas.deqm.topic.name=deqm_inbd
 idaas.pdex.topic.name=pdex_inbd
 idaas.epdx.topic.name=epdx_inbd
+idaas.ccda.topic.name=ccda_inbd
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
